--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "crypto": "^1.0.1",
     "googleapis": "^150.0.1",
     "imapflow": "^1.0.187",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "mailparser": "^3.7.3",
     "next": "15.2.4",
+    "nodemailer": "^6.9.8",
     "pg": "^8.16.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -29,7 +30,11 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
+    "@types/pg": "^8.10.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
